<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnCommand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/btn_sound"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btn_save_image"/>

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/btn_load_image"/>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_clear"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnFill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_fill"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnPen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_pen"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/btnEraser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:text="@string/btn_eraser"
            android:layout_margin="5dp" />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBlack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/black"/>

            <Button
                android:id="@+id/btnWhite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/white"/>

            <Button
                android:id="@+id/btnRed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/btnGreen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/green"/>

            <Button
                android:id="@+id/btnBlue"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/blue"/>

            <Button
                android:id="@+id/btnYellow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/yellow"/>

            <Button
                android:id="@+id/btnPurple"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/purple"/>

            <Button
                android:id="@+id/btnPink"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.Button.Circle"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:backgroundTint="@color/pink"/>
        </LinearLayout>

    </HorizontalScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.hyak4j.sounddrawing.view.PaintView
        android:id="@+id/paintView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

</LinearLayout>